install/traefik/003-Ingress.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`who.meba.xyz`)
      kind: Rule
      services:
        - name: whoami
          port: 80
