install/traefik/004-test.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.meba.xyz`)
      kind: Rule
      services:
        - name: api@internal
          kind: traefik
