install/traefik/005-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  tls:
    - hosts:
        - kube.meba.xyz
      secretName: tls-kube
  rules:
  - host: kube.meba.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kdash
              port:
                number: 8001
