install/traefik/005-test.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.meba.xyz`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:                              
    secretName: tls-traefik-dashboard
